[gd_scene load_steps=25 format=3 uid="uid://jctoum2s83s5"]

[ext_resource type="PackedScene" uid="uid://c738or0v7aejx" path="res://data/src/scenes/hex_grid.tscn" id="1_24fly"]
[ext_resource type="Script" path="res://data/src/scenes/game_scene.gd" id="1_pk3lm"]
[ext_resource type="Script" path="res://data/src/scenes/free_cam.gd" id="2_7q25c"]
[ext_resource type="Texture2D" uid="uid://dl0gqpeyeuqsw" path="res://data/assets/icons/gear.png" id="3_tnlje"]
[ext_resource type="Texture2D" uid="uid://d33jr4gun0svs" path="res://data/assets/icons/exit.png" id="3_tywfw"]
[ext_resource type="Texture2D" uid="uid://pxhspqp20odh" path="res://data/assets/icons/arrow_left.png" id="4_mjwxb"]
[ext_resource type="PackedScene" uid="uid://br2e5np03liyc" path="res://data/src/ui/simple_button.tscn" id="5_0144l"]
[ext_resource type="Texture2D" uid="uid://cx87e7se22o8o" path="res://data/assets/icons/arrow_top.png" id="5_muh1k"]
[ext_resource type="Texture2D" uid="uid://csdkjvnp0edem" path="res://data/assets/icons/arrow_right.png" id="6_pbh67"]
[ext_resource type="Texture2D" uid="uid://cj2w4t4ja5r5p" path="res://data/assets/icons/freelook.png" id="9_x6pr2"]
[ext_resource type="PackedScene" uid="uid://2xoja2np73kf" path="res://data/src/ui/volume_box.tscn" id="10_h47cl"]
[ext_resource type="Script" path="res://data/src/scenes/player_list.gd" id="11_6dhu0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kh8yj"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_u5scc"]

[sub_resource type="Sky" id="Sky_asbit"]
sky_material = SubResource("ProceduralSkyMaterial_u5scc")

[sub_resource type="Environment" id="Environment_0sc42"]
background_mode = 2
sky = SubResource("Sky_asbit")
volumetric_fog_albedo = Color(0.317647, 0.32549, 0.858824, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mmk1d"]
albedo_color = Color(1, 0, 1, 1)

[sub_resource type="SphereMesh" id="SphereMesh_q45y0"]
material = SubResource("StandardMaterial3D_mmk1d")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0buuq"]
albedo_color = Color(0, 0, 1, 1)

[sub_resource type="SphereMesh" id="SphereMesh_lrckt"]
material = SubResource("StandardMaterial3D_0buuq")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uciur"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_kli1f"]
material = SubResource("StandardMaterial3D_uciur")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6mmue"]
albedo_color = Color(0, 1, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_8h7f6"]
material = SubResource("StandardMaterial3D_6mmue")

[node name="GameScene" type="Node3D"]
script = ExtResource("1_pk3lm")

[node name="SceneBuffer" type="Node" parent="."]
unique_name_in_owner = true

[node name="MainScene" type="Node" parent="."]
unique_name_in_owner = true

[node name="HexGrid" parent="MainScene" instance=ExtResource("1_24fly")]

[node name="UserInterface" type="Node" parent="."]

[node name="TopBar" type="CanvasLayer" parent="UserInterface"]
unique_name_in_owner = true

[node name="CenterContainer" type="CenterContainer" parent="UserInterface/TopBar"]
anchors_preset = 10
anchor_right = 1.0
offset_top = -2.0
offset_bottom = 52.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UserInterface/TopBar/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SettingsButton" parent="UserInterface/TopBar/CenterContainer/HBoxContainer" instance=ExtResource("5_0144l")]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("3_tnlje")

[node name="PreviousView" parent="UserInterface/TopBar/CenterContainer/HBoxContainer" instance=ExtResource("5_0144l")]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("4_mjwxb")

[node name="ResetView" parent="UserInterface/TopBar/CenterContainer/HBoxContainer" instance=ExtResource("5_0144l")]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("5_muh1k")

[node name="NextView" parent="UserInterface/TopBar/CenterContainer/HBoxContainer" instance=ExtResource("5_0144l")]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("6_pbh67")

[node name="FreelookView" parent="UserInterface/TopBar/CenterContainer/HBoxContainer" instance=ExtResource("5_0144l")]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("9_x6pr2")

[node name="EndButton" parent="UserInterface/TopBar/CenterContainer/HBoxContainer" instance=ExtResource("5_0144l")]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("3_tywfw")

[node name="OverlayMenu" type="CanvasLayer" parent="UserInterface"]
unique_name_in_owner = true

[node name="ColorRect" type="ColorRect" parent="UserInterface/OverlayMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.0784314, 0.321569, 0.694118)

[node name="CenterContainer" type="CenterContainer" parent="UserInterface/OverlayMenu/ColorRect"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UserInterface/OverlayMenu/ColorRect/CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="MasterBar" parent="UserInterface/OverlayMenu/ColorRect/CenterContainer/VBoxContainer" instance=ExtResource("10_h47cl")]
unique_name_in_owner = true
layout_mode = 2

[node name="SfxBar" parent="UserInterface/OverlayMenu/ColorRect/CenterContainer/VBoxContainer" instance=ExtResource("10_h47cl")]
unique_name_in_owner = true
layout_mode = 2

[node name="MusicBar" parent="UserInterface/OverlayMenu/ColorRect/CenterContainer/VBoxContainer" instance=ExtResource("10_h47cl")]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="UserInterface/OverlayMenu/ColorRect/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_kh8yj")

[node name="CenterContainer" type="CenterContainer" parent="UserInterface/OverlayMenu/ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="CloseOverlayButton" parent="UserInterface/OverlayMenu/ColorRect/CenterContainer/VBoxContainer/CenterContainer" instance=ExtResource("5_0144l")]
unique_name_in_owner = true
layout_mode = 2

[node name="PlayerList" type="CanvasLayer" parent="UserInterface"]
unique_name_in_owner = true
script = ExtResource("11_6dhu0")

[node name="PlayerContainer" type="HBoxContainer" parent="UserInterface/PlayerList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="BotomRightCorner" type="CanvasLayer" parent="UserInterface"]

[node name="CenterContainer" type="CenterContainer" parent="UserInterface/BotomRightCorner"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 8

[node name="HBoxContainer" type="HBoxContainer" parent="UserInterface/BotomRightCorner/CenterContainer"]
layout_mode = 2

[node name="NextTurnButton" parent="UserInterface/BotomRightCorner/CenterContainer/HBoxContainer" instance=ExtResource("5_0144l")]
unique_name_in_owner = true
layout_mode = 2

[node name="World" type="Node" parent="."]

[node name="FreeCam" type="Camera3D" parent="World"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 4, 4, 10.862)
script = ExtResource("2_7q25c")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="World"]
transform = Transform3D(-0.170249, 0.545927, -0.820353, 0.0558857, 0.836516, 0.545085, 0.983815, 0.0469542, -0.172926, -3, 4, 3.29633)

[node name="OmniLight3D" type="OmniLight3D" parent="World"]
transform = Transform3D(-0.099339, 0.995026, 0.00737536, -0.995049, -0.0993138, -0.00370782, -0.0029569, -0.00770718, 0.999966, 4.14932, 0.709092, -1.07771)
light_color = Color(0.301961, 1, 0.372549, 1)
light_energy = 11.858
shadow_enabled = true
shadow_opacity = 0.88
omni_range = 20.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="World"]
environment = SubResource("Environment_0sc42")

[node name="DEBUG_TODO" type="Node" parent="."]

[node name="BallCenter" type="MeshInstance3D" parent="DEBUG_TODO"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 2)
visible = false
mesh = SubResource("SphereMesh_q45y0")
skeleton = NodePath("../..")

[node name="BallZ" type="MeshInstance3D" parent="DEBUG_TODO"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)
visible = false
mesh = SubResource("SphereMesh_lrckt")
skeleton = NodePath("../..")

[node name="BallX" type="MeshInstance3D" parent="DEBUG_TODO"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0)
visible = false
mesh = SubResource("SphereMesh_kli1f")
skeleton = NodePath("../..")

[node name="Ball" type="MeshInstance3D" parent="DEBUG_TODO"]
unique_name_in_owner = true
visible = false
mesh = SubResource("SphereMesh_8h7f6")
skeleton = NodePath("../..")
